# nge_db

./: .gitignore  00_Stats.ipynb  01_Timelags.ipynb  02a_Eval_Oesophagus.ipynb  02b_Eval_Hodgkin.ipynb  README.md  config.ini  pyproject.toml
api/: __init__.py  app.py  models.py  utils.py
api/nge_shim/: models.py  utils.py
api/queries/: __init__.py  aact.py  civic.py  ggponc.py  pubmed.py  utils.py  versions.py
api/viz/: timelines.py
classification/: utils.py
classification/inference/: 01_Prepare_Dataset.ipynb  02_Predict_Significance_Finetuned.ipynb  _predict_significance_zeroshot.ipynb
classification/training/: baseline.ipynb  comparison.ipynb  evidence_inference_dataset.ipynb  setfit.ipynb  transformer.ipynb  zero_shot.ipynb
data/: topic_versions.yaml
data/literature/: cn_id_to_pm_id.json  doi_to_pm_id.json  fuzzy_title_to_nct_id.json  fuzzy_title_to_pm_id.json
evaluation/: 00_ggponc_literature.ipynb  01_ris_parsing_es.ipynb  01_ris_parsing_hl.ipynb  01_ris_parsing_hl_retro.ipynb  02_eval_hl_retro.ipynb  03_eval_data_overview.ipynb  04_eval_api.ipynb  04_eval_relation_mapping.ipynb  __init__.py  matching.py  metrics.py  parsing.py  plotting.py
frontend/: __init__.py  app.py  main.py  table.py
integration/: __init__.py  citation_utils.py  config.py  db.py  erd.py  flagging.py  main.py
integration/orm/: __init__.py  aact.py  base.py  civic.py  ggponc.py  ggponc_literature.py  pubmed.py  trialstreamer.py  versions.py
integration/parsers/: __init__.py  aact.py  civic.py  ggponc.py  ggponc_literature.py  pubmed.py  trialstreamer.py  utils.py
integration/sources/: __init__.py  aact.py  civic.py  ggponc.py  ggponc_literature.py  pubmed.py  trialstreamer.py
integration/umls/: normalization.py  (+2 more)
registries/: aact.txt  ggponc.txt  pubmed.txt  trialstreamer.txt
