[tool.poetry]
name = "ggponc-update-signals"
version = "0.1.0"
description = ""
authors = ["Paul Wullenweber <paul.wullenweber@student.hpi.de>"]
readme = "README.md"
packages = [{include = "integration"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
pooch = "^1.6.0"
sqlalchemy = "^2.0.0"
tqdm = "^4.64.1"
jupyter = "^1.0.0"
pyarrow = "^10.0.1"
python-dateutil = "^2.8.2"
civicpy = "^3.0.0"
beautifulsoup4 = "^4.11.2"
umls-downloader = "^0.1.1"
fastapi = {extras = ["all"], version = "^0.101.0"}
datasets = "^2.12.0"
scikit-learn = "^1.2.2"
wandb = "^0.15.1"
transformers = "^4.28.1"
streamlit = "^1.22.0"
cachetools = "^5.3.1"
shelved-cache = "^0.3.1"
types-cachetools = "^5.3.0.5"
openpyxl = "^3.1.2"
setfit = "^0.7.0"
clean-text = "^0.6.0"
rispy = "^0.7.1"
sankeyflow = "^0.3.8"
matplotlib-venn = "^0.11.9"
streamlit-aggrid = "^0.3.4.post3"
rapidfuzz = "^3.3.0"
pymysql = "^1.1.0"
eralchemy2 = "^1.3.7"
biopython = "^1.81"
graphviz = "^0.20.1"
jsonlines = "^4.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.12.0"
pytest = "^7.2.1"
pdoc = "^12.3.1"
pre-commit = "^2.21.0"
pydocstyle = "^6.3.0"
flake8 = "^6.0.0"
nbdev = "^2.3.9"
tomli = "^2.0.1"
flake8-pyproject = "^1.2.2"
ipywidgets = ">=7.0, <8.0"
pylint = "^3.0.0"

[tool.poetry.scripts]
populate = "integration.main:main"
erd = "integration.erd:main"
api = "api.app:main"
frontend = "frontend.main:main"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 100
extend-ignore = "E203"

[tool.pytest.ini_options]
log_cli = "True"
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
